fixed package name alignment problem

--- a/my-vite-app/src/components/BroadbandDetails/BroadbandDetailsPrePaid.css
+++ b/my-vite-app/src/components/BroadbandDetails/BroadbandDetailsPrePaid.css
@@ -13,11 +13,11 @@
 
   .package-name-prepaid {
     background-color: #2563eb;
+    text-align: center;
     color: white;
     padding: 8px 20px;
     border-radius: 5px;
     display: inline-block;
     font-weight: 600;
     margin-bottom: 10px;
-    margin-left: 20%;
   }
